# mccl-jax

./: .gitignore  CMakeLists.txt  README.md
docs/: ops.md
src/execution/: metal_buffer.h  metal_buffer.mm
src/jam/: CMakeLists.txt  jam.cc  jam.h  jam_check.mm  jam_run.h  jam_run.mm  lower.h  lower.mm  lowering_internal.h  parse.cc  parse.h  program.mm  program_impl.h
src/jam/ops/: binary.mm  collectives.mm  control_flow.mm  dynamic.mm  elementwise.mm  gather_scatter.mm  hard_limit.mm  linalg.mm  norm.mm  ops_common.h  reduce.mm  rng.mm  shape.mm  structural.mm  unary.mm
src/mccl/collective/: CMakeLists.txt  bootstrap.cc  bootstrap.h  collectives.cc  collectives.h  comm.cc  comm.h  smoke.cc  smoke_multi.cc  status.h
src/pjrt/: pjrt_e2e.cc
src/pjrt/api/: pjrt_c_api.cc  pjrt_c_api.h
temp/: dp_train.py
